[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
log = "0.4"
clap = "4.4"
rand = "0.8"
bitcoincash-addr = "0.5"
